add many User-related jsdocs for swagger API
